--- a/p2.html
+++ b/p2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Your Name | Code 2 Portfolio</title>
+    <title>Yulia Ivanova | Code 2 Portfolio</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,12 +11,20 @@
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kavoon&family=Libre+Baskerville&family=Rowdies:wght@300&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kavoon&family=Libre+Baskerville&family=Orbitron&family=Rowdies:wght@300&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <!-- navigation menu -->
-    <div class="nav">
-      <h1>Your Name</h1>
+    <nav>
+      <a href="index.html"><h1>Yulia Ivanova</h1></a>
       <ul>
         <li>Project <a href="p1.html">#1</a></li>
         <li>Project <a href="p2.html">#2</a></li>
@@ -28,13 +36,53 @@
         <li>Project <a href="p8.html">#8</a></li>
         <li>Project <a href="p9.html">#9</a></li>
       </ul>
-    </div>
-
+    </nav>
     <!-- main content -->
     <div class="content">
+      <!-- 1. give your project  a titile -->
+
+      <h1>
+        Project #2 Lost & Found
+      </h1>
+
+      <!-- 2. embed your p5 sketch -->
+
+      <div class="fullwidth">
+        <!-- below width and height refers to the dimensions of your sketch-->
+
+        <iframe style="width:300px;height:300px;"src="https://editor.p5js.org/yivanov/full/WomwCZxhK"></iframe>
+      </div>
+
       <p>
-        Coming soon
+     Sketch by Yulia 
+   </p>
+       <p>
+        Partner's name: Nuohan Jiang
       </p>
+
+      <!-- 3. write a short description to describe what the work is about -->
+      <h1>
+        Description Received
+      </h1>
+
+      <p>
+        "A puffy thing that has a round head and body. The head is a bit more than twice size of the body. There is stick sticking out of the head with hallowed circle on top of it. They are all in crimson red. There are big brown eyes and a small grayish nose on the face. The face and body is in cadmium red with the middle of them being light orange. There is a light red bag on the body like the ones kangaroos have. The arms and legs are in a deeper red. The arms are shorter than the legs. Both of them is a bit wide open."
+      </p>
+
+      <!-- 4. reflection -->
+      
+
+      <!-- 4. reflection -->
+      <h1>
+        Reflection
+      </h1>
+
+      <p>
+        I found this exercise satisfying because of the monotony of the work. However, I faced some difficulties organizing the code.
+      </p>
+
+      <!-- 5. reflection -->
+      
     </div>
   </body>
 </html>
