--- a/p2.html
+++ b/p2.html
@@ -78,7 +78,7 @@
       </h1>
 
       <p>
-        I found this exercise satisfying because of the monotony of the work. However, I faced some difficulties organizing the code.
+        I enjoyed working on this assignment. I was dying to know exactly what my classmate might have lost. I had trouble with rotation, pop, push commands, but after some tutorials I realized what my mistake was.
       </p>
 
       <!-- 5. reflection -->
